--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,1 +1,4 @@
-<h1>Hello</h1>
+<form class="d-flex flex-column align-items-center justify-content-center" action="">
+  <input class="alert alert-secondary b" type="url" placeholder="Input URL here" name="image" required style="width: 600px; height: 45px;">
+  <button class="btn btn-outline-primary w-50" type="submit">Shorten</button>
+</form>
