Add: shortene function mongoose

--- a/views/show.hbs
+++ b/views/show.hbs
@@ -1,4 +1,5 @@
 <form class="d-flex flex-column align-items-center justify-content-center" action="">
   <h4>Success!Please use this link:</h3>
+  <a href="{{urlOriginal}}">{{urlShorten}}</a>
   <button class="btn btn-primary" type="submit">Copy!</button>
 </form>
