Add: validity copy function

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,5 @@
 <form class="d-flex flex-column align-items-center justify-content-center" action="/" method="POST">
+  <!-- 當輸入空網址，彈出提示視窗 --> 
   <input class="alert alert-secondary" type="url" placeholder="Input URL here" name="url" required style="width: 600px; height: 45px;">
   <button class="btn btn-outline-primary w-50" type="submit">Shorten</button>
 </form>
