--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -9,10 +9,12 @@
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body class="d-flex flex-column align-items-center justify-content-center mt-5">
-  <div class="d-flex flex-column align-items-center justify-content-center">
-    <h1>URL Shortener</h1>
-    <img src="/images/img.png" style="width: 150px;">
-  </div>
+  <a href="/" style="text-decoration:none;color:black;">
+    <div class="d-flex flex-column align-items-center justify-content-center">
+      <h1>URL Shortener</h1>
+      <img src="/images/img.png" style="width: 150px;">
+    </div>
+  </a>
   <main class="mt-5">
     {{{ body }}}
   </main>
